Added directive examples.

--- a/todo-ngrx-app/src/app/todo/todo-list.component.html
+++ b/todo-ngrx-app/src/app/todo/todo-list.component.html
@@ -10,3 +10,5 @@
 <div *ngFor="let todo of completedTodos$ | async">
   {{ todo.title }}
 </div>
+
+<input type="text" *appDisp="true" [appTooltip]="'enter some text'">
